# PracticasArquiRobots

./: README.md  hoeopl.txt
Practica1/: README.md
Practica1/Practica1/: CMakeLists.txt  package.xml
Practica2/: README.md
Practica2/Practica2/: CMakeLists.txt  package.xml
Practica2/Practica2/include/Practica2/: BumperLoggerNode.hpp  LoggerNode.hpp  PublisherNode.hpp  SubscriberNode.hpp
Practica2/Practica2/src/: bumper_logger_main.cpp  logger_main.cpp  pub_sub_main.cpp  publisher_main.cpp  subscriber_main.cpp
Practica2/Practica2/src/Practica2/: BumperLoggerNode.cpp  LoggerNode.cpp  PublisherNode.cpp  SubscriberNode.cpp
Practica3/: README.md
Practica3/Practica3/: CMakeLists.txt  ObstacleDetectorNode.cpp  ObstacleDetectorNode.hpp  nearest_obstacle_params.yaml  package.xml
Practica3/Practica3/include/Practica3/: NearestObstacleNode.hpp
Practica3/Practica3/launch/: nearest_obstacle.launch.py
Practica3/Practica3/sensors/camera/: CMakeLists.txt  package.xml
Practica3/Practica3/sensors/camera/launch/: detection3d_hsv.launch.py
Practica3/Practica3/sensors/camera/src/camera/: HSVFilterNode.cpp  YoloDetectionNode.cpp
Practica3/Practica3/sensors/camera/worlds/: robocuplab.world  robocupspl.world
Practica3/Practica3/sensors/laser/: package.xml
Practica3/Practica3/sensors/laser/launch/: laser.launch.py
Practica3/Practica3/sensors/laser/tests/: CMakeLists.txt  laser_test.cpp
Practica3/Practica3/src/: nearest_obstacle_main.cpp
Practica3/Practica3/src/Practica3/: NearestObstacleNode.cpp
Practica3/Practica3/tf_seeker/: CMakeLists.txt  package.xml
Practica3/Practica3/tf_seeker/worlds/: empty.world
